# bdrc-kangyur-audit

./: .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml
src/bdrc_audit/: __init__.py  cli.py  fetch.py  net.py  report.py  validate.py  walk.py
tests/: conftest.py  test_cli.py  test_fetch.py  test_net.py  test_report.py  test_validate.py  test_walk.py
