[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdrc-kangyur-audit"
version = "0.1.0"
description = "Audit toolkit for BDRC Kangyur Unicode etexts: walk, fetch, validate, report."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "BDRC Kangyur Audit contributors" }]
keywords = ["bdrc", "kangyur", "tibetan", "unicode", "audit", "etext"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/ahxudhsh/bdrc-kangyur-audit"
Repository = "https://github.com/ahxudhsh/bdrc-kangyur-audit"

[project.scripts]
bdrc-audit = "bdrc_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
